--- a/public/assets/sass/_components.scss
+++ b/public/assets/sass/_components.scss
@@ -94,7 +94,7 @@
 @mixin header {
   justify-content: center;
   align-items: center;
-  height: 180px;
+  height: 48px;
   a {
     @include logo;
   }
@@ -112,7 +112,7 @@
   li {
     @include mixins.flex-center;
     height: 64px;
-    background-color: rgba(colors.$primary, 0.25);
+    background-color: rgba(colors.$bgTabs, 0.75);
     border-top-left-radius: var(--radius);
     border-top-right-radius: var(--radius);
     color: var(--dark);
@@ -121,11 +121,11 @@
     font-size: 22px;
     cursor: pointer;
     &:hover {
-      background-color: rgba(colors.$primary, 0.5);
+      background-color: rgba(colors.$bgTabs, 0.5);
     }
     &.active {
-      background-color: var(--primary);
       cursor: default;
+      background-color: rgb(219, 219, 219);
     }
   }
 }
