--- a/public/assets/sass/_app.scss
+++ b/public/assets/sass/_app.scss
@@ -68,6 +68,8 @@
       width: 100%;
       position: relative;
       box-shadow: 1px 3px 9px -1px #00000087;
+      min-height: 46px;
+      align-items: center;
       #company {
         flex: 1;
         align-items: center;
@@ -113,21 +115,21 @@
         position: relative;
         display: flex;
       }
-      #userName {
-        color: var(--white);
-        font-size: 20px;
-        z-index: 3;
-        position: absolute;
-        top: 30px;
-        right: 45px;
-        text-align: right;
-        text-transform: uppercase;
-        background-color: var(--primary);
-        padding: 5px 10px;
-        padding-right: 40px;
-        border-radius: 5px;
-        min-height: 34px;
-      }
+      // #userName {
+      //   color: var(--white);
+      //   font-size: 20px;
+      //   z-index: 3;
+      //   position: absolute;
+      //   top: 30px;
+      //   right: 45px;
+      //   text-align: right;
+      //   text-transform: uppercase;
+      //   background-color: var(--primary);
+      //   padding: 5px 10px;
+      //   padding-right: 40px;
+      //   border-radius: 5px;
+      //   min-height: 34px;
+      // }
       #avatar {
         position: absolute;
         top: var(--space);
@@ -142,10 +144,10 @@
       > header {
         @include components.horizontalTitle;
         width: 100%;
+        padding: 15px 0;
         #new-product {
           @include components.button;
-          position: absolute;
-          right: 10px;
+          margin-top: 20px;
         }
       }
       > section {
