--- a/public/assets/sass/_colors.scss
+++ b/public/assets/sass/_colors.scss
@@ -21,7 +21,7 @@ $secondary: rgba(#A1EB73, .7); */
 
 $theme: blue;
 $bgLogin: #08182b;
-$bgTabs: #202f3f;
+$bgTabs: #9c9c9c5b;
 $bgHorizontalLine: #1f2525;
 $primary: #1f3be5;
 $primaryText: $white;
