--- a/public/assets/sass/_auth.scss
+++ b/public/assets/sass/_auth.scss
@@ -52,6 +52,18 @@
     width: 350px;
     z-index: 1;
     background-color: rgb(219, 219, 219);
+    #link-shop {
+      padding: 5px;
+      background: white;
+      color: #008cff;
+      border-radius: 5px;
+      font-weight: bold;
+      width: max-content;
+    }
+    h4 {
+      margin: 0;
+      margin-top: 30px;
+    }
     label {
       margin-top: 12px;
       margin-bottom: 5px;
@@ -107,6 +119,70 @@
         @include components.button;
       }
     }
+
+    // css adicional
+    /* The switch - the box around the slider */
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 60px;
+      height: 34px;
+    }
+
+    /* Hide default HTML checkbox */
+    .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    /* The slider */
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
+
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
+
+    input:checked + .slider {
+      background-color: #2196F3;
+    }
+
+    input:focus + .slider {
+      box-shadow: 0 0 1px #2196F3;
+    }
+
+    input:checked + .slider:before {
+      -webkit-transform: translateX(26px);
+      -ms-transform: translateX(26px);
+      transform: translateX(26px);
+    }
+
+    /* Rounded sliders */
+    .slider.round {
+      border-radius: 34px;
+    }
+
+    .slider.round:before {
+      border-radius: 50%;
+    }
   }
   #options {
     background-color: #ffffff;
@@ -116,14 +192,75 @@
     width: 350px;
     z-index: 0;
     margin-top: -20px;
+    .row {
+      flex-direction: row;
+    }
     h3 {
       margin: 10px 0;
     }
-    
+    ul {
+      padding: 0;
+      padding-top: 5px;
+      margin: 0;
+      margin-bottom: 40px;
+      position: relative;
+      > div {
+        margin-bottom: 15px;
+      }
+      .min-max {
+        padding-left: 35px;
+        margin-top: 4px;
+      }
+      span {
+        margin: 0 5px;
+        font-size: 14px;
+      }
+      li {
+        list-style: none;
+        padding-left: 10px;
+        display: flex;
+        border-bottom: 1px dotted #b0b0b0;
+        justify-content: space-between;
+        margin-bottom: 5px;
+      }
+      .btn-edit, .btn-remove {
+        background: white;
+        outline: none;
+        border: 1px solid #0000001f;
+        padding: 10px;
+        cursor: pointer;
+        border-radius: 15px;
+        position: absolute;
+        &:hover {
+          opacity: 0.75;
+          background-color: var(--gray);
+        }
+      }
+      .btn-edit {
+        top: 0;
+        right: 40px;
+      }
+      .btn-remove {
+        top: 0;
+        right: -10px;
+      }
+      h4 {
+        margin: 0;
+        margin-right: 74px;
+        background: whitesmoke;
+        padding: 0 7px;
+        border-radius: 5px;
+        font-size: 17px;
+      }
+    }
+    #choose-additional {
+      @include components.button;
+    }
   }
   
   .options {
     padding: 0;
+    margin-top: 0;
     .row {
       display: flex;
       flex-direction: row;
@@ -132,6 +269,12 @@
     }
     label {
       margin: 5px 0;
+      font-size: 14px;
+      padding-left: 5px;
+      &.title {
+        font-size: 19px;
+        font-weight: bold;
+      }
     }
     textarea {
       border-radius: var(--radius);
@@ -183,6 +326,22 @@
       outline: none;
       border: none;
       padding: 10px;
+      cursor: pointer;
+    }
+  }
+  .form-new-aditional {
+    .row {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      padding: 10px 0;
+    }
+    label {
+      padding-left: 5px;
+    }
+    .new-additional {
+      @include components.button;
+      align-self: center;
       cursor: pointer;
     }
   }
