--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -93,7 +93,7 @@ label {
   overflow: auto;
 }
 #modal form::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 #modal form::-webkit-scrollbar-track {
   background: #ffffff;
@@ -512,6 +512,22 @@ label {
   width: 350px;
   z-index: 1;
   background-color: #dbdbdb;
+  /* The switch - the box around the slider */
+  /* Hide default HTML checkbox */
+  /* The slider */
+  /* Rounded sliders */
+}
+.auth main form #link-shop {
+  padding: 5px;
+  background: white;
+  color: #008cff;
+  border-radius: 5px;
+  font-weight: bold;
+  width: max-content;
+}
+.auth main form h4 {
+  margin: 0;
+  margin-top: 30px;
 }
 .auth main form label {
   margin-top: 12px;
@@ -652,6 +668,56 @@ label {
   background-color: var(--light);
   cursor: progress;
 }
+.auth main form .switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+.auth main form .switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.auth main form .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+.auth main form .slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+.auth main form input:checked + .slider {
+  background-color: #2196F3;
+}
+.auth main form input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+.auth main form input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+.auth main form .slider.round {
+  border-radius: 34px;
+}
+.auth main form .slider.round:before {
+  border-radius: 50%;
+}
 .auth #options {
   background-color: #ffffff;
   padding: var(--space);
@@ -661,11 +727,99 @@ label {
   z-index: 0;
   margin-top: -20px;
 }
+.auth #options .row {
+  flex-direction: row;
+}
 .auth #options h3 {
   margin: 10px 0;
 }
+.auth #options ul {
+  padding: 0;
+  padding-top: 5px;
+  margin: 0;
+  margin-bottom: 40px;
+  position: relative;
+}
+.auth #options ul > div {
+  margin-bottom: 15px;
+}
+.auth #options ul .min-max {
+  padding-left: 35px;
+  margin-top: 4px;
+}
+.auth #options ul span {
+  margin: 0 5px;
+  font-size: 14px;
+}
+.auth #options ul li {
+  list-style: none;
+  padding-left: 10px;
+  display: flex;
+  border-bottom: 1px dotted #b0b0b0;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+.auth #options ul .btn-edit, .auth #options ul .btn-remove {
+  background: white;
+  outline: none;
+  border: 1px solid #0000001f;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 15px;
+  position: absolute;
+}
+.auth #options ul .btn-edit:hover, .auth #options ul .btn-remove:hover {
+  opacity: 0.75;
+  background-color: var(--gray);
+}
+.auth #options ul .btn-edit {
+  top: 0;
+  right: 40px;
+}
+.auth #options ul .btn-remove {
+  top: 0;
+  right: -10px;
+}
+.auth #options ul h4 {
+  margin: 0;
+  margin-right: 74px;
+  background: whitesmoke;
+  padding: 0 7px;
+  border-radius: 5px;
+  font-size: 17px;
+}
+.auth #options #choose-additional {
+  background-color: #101d1d;
+  border: none;
+  border-radius: var(--radius);
+  color: var(--white);
+  padding: 1rem;
+  min-width: 110px;
+  text-transform: uppercase;
+  outline: none;
+  cursor: pointer;
+  box-shadow: 0 0 10px rgba(16, 29, 29, 0.25);
+  font-size: 0.9rem;
+  letter-spacing: 0.5px;
+  font-weight: bold;
+}
+.auth #options #choose-additional:hover {
+  background-color: #142626;
+  box-shadow: 0 0 10px var(--primary);
+}
+.auth #options #choose-additional:active {
+  background-color: var(--light);
+  color: var(--dark);
+  transition-duration: 0.05s;
+  box-shadow: 0 0 5px var(--primary);
+}
+.auth #options #choose-additional:disabled {
+  background-color: var(--light);
+  cursor: progress;
+}
 .auth .options {
   padding: 0;
+  margin-top: 0;
 }
 .auth .options .row {
   display: flex;
@@ -675,6 +829,12 @@ label {
 }
 .auth .options label {
   margin: 5px 0;
+  font-size: 14px;
+  padding-left: 5px;
+}
+.auth .options label.title {
+  font-size: 19px;
+  font-weight: bold;
 }
 .auth .options textarea {
   border-radius: var(--radius);
@@ -743,6 +903,46 @@ label {
   border: none;
   padding: 10px;
   cursor: pointer;
+}
+.auth .form-new-aditional .row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 10px 0;
+}
+.auth .form-new-aditional label {
+  padding-left: 5px;
+}
+.auth .form-new-aditional .new-additional {
+  background-color: #101d1d;
+  border: none;
+  border-radius: var(--radius);
+  color: var(--white);
+  padding: 1rem;
+  min-width: 110px;
+  text-transform: uppercase;
+  outline: none;
+  cursor: pointer;
+  box-shadow: 0 0 10px rgba(16, 29, 29, 0.25);
+  font-size: 0.9rem;
+  letter-spacing: 0.5px;
+  font-weight: bold;
+  align-self: center;
+  cursor: pointer;
+}
+.auth .form-new-aditional .new-additional:hover {
+  background-color: #142626;
+  box-shadow: 0 0 10px var(--primary);
+}
+.auth .form-new-aditional .new-additional:active {
+  background-color: var(--light);
+  color: var(--dark);
+  transition-duration: 0.05s;
+  box-shadow: 0 0 5px var(--primary);
+}
+.auth .form-new-aditional .new-additional:disabled {
+  background-color: var(--light);
+  cursor: progress;
 }
 .auth .btn-add {
   background-color: #101d1d;
@@ -901,6 +1101,38 @@ label {
   flex: 1;
   width: 100%;
 }
+@media (min-width: 768px) {
+  #app > section main {
+    max-height: calc(100vh - 100px);
+    overflow-y: scroll;
+  }
+  #app > section main::-webkit-scrollbar {
+    width: 5px;
+  }
+  #app > section main::-webkit-scrollbar-track {
+    background: #ffffff;
+    margin: 10px 0;
+  }
+  #app > section main::-webkit-scrollbar-thumb {
+    background: rgba(16, 29, 29, 0.25);
+  }
+  #app > section main:hover::-webkit-scrollbar-thumb {
+    background: rgba(16, 29, 29, 0.5);
+  }
+  #app > section main:hover::-webkit-scrollbar-thumb:hover {
+    background: rgba(16, 29, 29, 0.75);
+  }
+  #app > section main:hover::-webkit-scrollbar-thumb:active {
+    background: #101d1d;
+  }
+  #app > section main::-webkit-scrollbar-track {
+    background: transparent;
+    margin: 10px 0;
+  }
+  #app > section main::-webkit-scrollbar-track:hover {
+    background: #ffffff;
+  }
+}
 #app > section main > header {
   justify-content: center;
   align-items: center;
@@ -952,7 +1184,7 @@ label {
   padding-bottom: 100px;
 }
 #app > section main > section::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 #app > section main > section::-webkit-scrollbar-track {
   background: #ffffff;
@@ -1546,7 +1778,7 @@ label {
   margin: 0 auto;
 }
 #list-products::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 #list-products::-webkit-scrollbar-track {
   background: #ffffff;
@@ -1662,7 +1894,7 @@ label {
   overflow: auto;
 }
 #list-orders::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 #list-orders::-webkit-scrollbar-track {
   background: #ffffff;
