--- a/public/assets/sass/_defaults.scss
+++ b/public/assets/sass/_defaults.scss
@@ -126,9 +126,10 @@ label {
       }
       .image-prod-modal {
         width: 100%;
+        border-radius: 15px;
       }
       .description-prod {
-        margin: 10px 0;
+        // margin: 10px 0;
         padding: 10px;
       }
       .price-prod {
