--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -202,9 +202,9 @@ label {
 }
 #modal > div > .modal-content .image-prod-modal {
   width: 100%;
+  border-radius: 15px;
 }
 #modal > div > .modal-content .description-prod {
-  margin: 10px 0;
   padding: 10px;
 }
 #modal > div > .modal-content .price-prod {
@@ -1209,6 +1209,10 @@ label {
   margin: 0;
   font-size: 22px;
   font-weight: bold;
+  border-bottom: 1px dotted;
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
 }
 #app > section main .category ul {
   margin: 0;
@@ -1707,6 +1711,7 @@ label {
     width: 350px;
     position: static;
     height: 100vh;
+    box-shadow: -5px 0px 5px -7px #00000063;
   }
   #app aside.open {
     height: 100vh;
