--- a/public/assets/sass/_app.scss
+++ b/public/assets/sass/_app.scss
@@ -607,6 +607,7 @@
       width: vars.$asideWidth;
       position: static;
       height: 100vh;
+      box-shadow: -5px 0px 5px -7px #00000063;
       &.open {
         height: 100vh;
       }
