--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -65,7 +65,7 @@ label {
   position: fixed;
   top: 20px;
   left: 20px;
-  z-index: 99;
+  z-index: 100;
   min-height: 50px;
   padding: 1rem;
   width: 80%;
@@ -167,7 +167,7 @@ label {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 999;
+  z-index: 99;
   width: 100%;
 }
 #modal > div > #overlay {
@@ -230,6 +230,11 @@ label {
   background: #eaeaea;
   padding: 10px;
   margin: 5px 0 0;
+  border: 3px solid transparent;
+  transition: border 0.3s ease-in-out;
+}
+#modal > div > .modal-content .options-product > div.error {
+  border: 3px solid red;
 }
 #modal > div > .modal-content .options-product > div ul {
   margin: 10px 0;
