--- a/public/assets/sass/_defaults.scss
+++ b/public/assets/sass/_defaults.scss
@@ -35,7 +35,7 @@ label {
   position: fixed;
   top: 20px;
   left: 20px;
-  z-index: 99;
+  z-index: 100;
   min-height: 50px;
   padding: 1rem;
   width: 80%;
@@ -92,7 +92,7 @@ label {
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 999;
+    z-index: 99;
     width: 100%;
     > #overlay {
       position: fixed;
@@ -156,6 +156,11 @@ label {
           background: #eaeaea;
           padding: 10px;
           margin: 5px 0 0;
+          border: 3px solid transparent;
+          transition: border 0.3s ease-in-out;
+          &.error {
+            border: 3px solid red;
+          }
           ul {
             margin: 10px 0;
             padding: 5px;
