--- a/public/assets/sass/_form.scss
+++ b/public/assets/sass/_form.scss
@@ -19,7 +19,7 @@
   width: 100%;
   border: #b5b5b5 1px solid;
   border-radius: var(--radius);
-  color: #b5b5b5;
+  color: #1b1b1b;
   font-size: 16px;
   padding: 0 var(--space);
   outline: none;
