--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -283,11 +283,18 @@ label {
   font-weight: bold;
   text-transform: uppercase;
   font-size: 0.9rem;
+  border: none;
+  border-radius: 9px;
   cursor: pointer;
 }
 #modal > div > .modal-content p a.danger,
 #modal > div > .modal-content p button.danger {
   background-color: var(--danger);
+}
+#modal > div > .modal-content p a.cancel,
+#modal > div > .modal-content p button.cancel {
+  background-color: var(--gray);
+  color: black;
 }
 #modal > div > .modal-content p a:first-child {
   margin-top: 0.5rem;
