--- a/public/assets/sass/_components.scss
+++ b/public/assets/sass/_components.scss
@@ -148,9 +148,10 @@
     margin-top: var(--space);
   }
   &[type=color] {
-    padding: 0;
-    height: revert;
-    border-radius: initial;
+    padding: 3px;
+    height: 35px;
+    width: 35px;
+    border-radius: 5px;
   }
 }
 
