--- a/public/assets/sass/_app.scss
+++ b/public/assets/sass/_app.scss
@@ -330,6 +330,29 @@
         @include form.panel;
         width: 100%;
         max-width: vars.$desktopStartWidth;
+        .label-delivery {
+          margin-left: 7px;
+          font-size: 19px;
+          font-weight: bold;
+        }
+        .msg-delivery {
+          max-width: 70%;
+          padding-left: 5px;
+        }
+        #tax-delivery, #msg-money, #msg-pix, #msg-card {
+          background: whitesmoke;
+          padding: 15px;
+          border-radius: 15px;
+          box-shadow: 0px 0px 8px -4px black;
+          margin: 10px 0;
+          input {
+            margin-top: 10px;
+            background-color: white;
+          }
+          span {
+            font-weight: bold;
+          }
+        }
         input,
         select {
           @include form.field;
@@ -337,6 +360,12 @@
           + select,
           + .fields {
             margin-top: var(--space);
+          }
+          &[type=radio] {
+            width: 30px;
+            height: 30px;
+            margin-right: 10px;
+            margin-bottom: 7px;
           }
         }
         .fields {
@@ -385,6 +414,7 @@
     color: var(--dark);
     height: 64px;
     z-index: 2;
+    box-shadow: 0 0 9px #0000005e;
     transition: height .3s ease-in-out;
     header {
       flex-direction: row;
@@ -557,6 +587,7 @@
           width: 90px;
           font-size: 18px;
           padding: 0 10px;
+          z-index: 2;
         }
         button {
           width: 120px;
