--- a/public/assets/sass/_auth.scss
+++ b/public/assets/sass/_auth.scss
@@ -16,10 +16,12 @@
   }
   #form-tabs {
     @include components.tabs;
+    height: 110px;
     background-color: #000000;
     width: 100%;
     li {
-      width: 175px;
+      width: 45%;
+      max-width: 175px;
     }
     a {
       display: flex;
@@ -50,7 +52,8 @@
     padding: var(--space);
     border-bottom-left-radius: var(--radius);
     border-bottom-right-radius: var(--radius);
-    width: 350px;
+    max-width: 350px;
+    width: 90%;
     z-index: 1;
     background-color: rgb(219, 219, 219);
     .wrap-photo {
@@ -66,6 +69,7 @@
       font-weight: bold;
       width: max-content;
       max-width: 300px;
+      max-width: 100%;
       overflow-wrap: break-word;
     }
     .row {
@@ -167,81 +171,16 @@
       }
     }
 
-    // css adicional
-    /* The switch - the box around the slider */
-    .switch {
-      position: relative;
-      display: inline-block;
-      width: 60px;
-      height: 34px;
-    }
-
-    /* Hide default HTML checkbox */
-    .switch input {
-      opacity: 0;
-      width: 0;
-      height: 0;
-    }
-
-    /* The slider */
-    .slider {
-      position: absolute;
-      cursor: pointer;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: #ccc;
-      -webkit-transition: .4s;
-      transition: .4s;
-    }
-
-    .slider:before {
-      position: absolute;
-      content: "";
-      height: 26px;
-      width: 26px;
-      left: 4px;
-      bottom: 4px;
-      background-color: white;
-      -webkit-transition: .4s;
-      transition: .4s;
-    }
-
-    input:checked + .slider {
-      background-color: #2196F3;
-    }
-
-    input:focus + .slider {
-      box-shadow: 0 0 1px #2196F3;
-    }
-
-    input:checked + .slider:before {
-      -webkit-transform: translateX(26px);
-      -ms-transform: translateX(26px);
-      transform: translateX(26px);
-    }
-
-    /* Rounded sliders */
-    .slider.round {
-      border-radius: 34px;
-    }
-
-    .slider.round:before {
-      border-radius: 50%;
-    }
   }
   #options {
     background-color: #ffffff;
     padding: var(--space);
     border-bottom-left-radius: var(--radius);
     border-bottom-right-radius: var(--radius);
-    width: 350px;
+    max-width: 350px;
+    width: 90%;
     z-index: 0;
     margin-top: -20px;
-    .row {
-      flex-direction: row;
-    }
     h3 {
       margin: 10px 0;
     }
