--- a/public/assets/sass/_auth.scss
+++ b/public/assets/sass/_auth.scss
@@ -94,6 +94,15 @@
       margin-top: 12px;
       margin-bottom: 5px;
       font-size: 14px;
+      &.big {
+        padding-left: 10px;
+        font-size: 16px;
+      }
+    }
+    #hash-success, #hash-error {
+      position: absolute;
+      top: 47px;
+      right: 5px;
     }
     input {
       @include components.input;
