--- a/public/assets/sass/_defaults.scss
+++ b/public/assets/sass/_defaults.scss
@@ -174,6 +174,9 @@ label {
                 flex-direction: row;
                 justify-content: space-between;
                 padding-left: 5px;
+                span {
+                  min-width: 75px;
+                }
               }
             }
           }
